added github link in header

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </li>
 
           <li class="nav-item">
-            <a href="https://twitter.com/PankajK66627177" class="nav-link" target="_blank">Twitter</a>
+            <a href="https://github.com/Pankajcoder1" class="nav-link" target="_blank">Github</a>
           </li>
 
           <li class="nav-item">
