added 10 more stack question

--- a/index.html
+++ b/index.html
@@ -328,6 +328,157 @@
                           </a>
                         </td>
                       </tr>
+
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Implement Queue using Stacks</td>
+                        <td>
+                          <a href="https://leetcode.com/problems/implement-queue-using-stacks/" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Abbreviate Fox</td>
+                        <td>
+                          <a href="https://atcoder.jp/contests/arc108/tasks/arc108_b/" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+                      
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Everybody Likes Good Arrays!</td>
+                        <td>
+                          <a href="https://codeforces.com/problemset/problem/1777/A" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>Bracket Sequence Deletion</td>
+                        <td>
+                          <a href="https://codeforces.com/problemset/problem/1657/C" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>Validate Stack Sequences</td>
+                        <td>
+                          <a href="https://leetcode.com/problems/validate-stack-sequences/" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">7</th>
+                        <td>Regular Bracket Sequence</td>
+                        <td>
+                          <a href="https://codeforces.com/problemset/problem/26/B" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">8</th>
+                        <td>ABBB</td>
+                        <td>
+                          <a href="https://codeforces.com/problemset/problem/1428/C" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">9</th>
+                        <td>Game with string</td>
+                        <td>
+                          <a href="https://codeforces.com/problemset/problem/1104/B" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">10</th>
+                        <td>Binary String To Subsequences</td>
+                        <td>
+                          <a href="https://codeforces.com/problemset/problem/1399/D" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">11</th>
+                        <td>Remove K Digits</td>
+                        <td>
+                          <a href="https://leetcode.com/problems/remove-k-digits/" target="_blank">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
                     </tbody>
                   </table>
                 </div>
