question on queue added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
+<!-- 
+    Author: Pankaj Kumar
+-->
+
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="This is a website for STL sheet.">
+  <meta name="keywords" content="STL, C++, Data Structure, BinaryMagic">
+  <meta name="author" content="BinaryMagic">
+  <title>STL Sheet by Pankaj Kumar</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -92,8 +100,11 @@
                 </a>
               </span>
 
-              <span class="video-link content-row-video-link" style="float: right;"><a
-                  href="https://youtu.be/zcBMRjaR0dA" target="_blank">Video Link</a></span>
+              <span class="video-link content-row-video-link" style="float: right;">
+                <a
+                  href="https://youtu.be/zcBMRjaR0dA" target="_blank">Video Link
+                </a>
+              </span>
 
               <div class="collapse" id="arrayTable" style="padding: 5px;">
                 <div class="card card-body">
@@ -509,8 +520,8 @@
                       <tr>
                         <th scope="row">1</th>
                         <td>
-                          Name&nbsp;
-                          <a href="" target="_blank" title="Question Link">
+                          Symmetric Tree&nbsp;
+                          <a href="https://leetcode.com/problems/symmetric-tree/" target="_blank" title="Question Link">
                             <i class="fa fa-external-link-square"></i>
                           </a>
                         </td>
@@ -520,6 +531,111 @@
                           </a>
                         </td>
                       </tr>
+
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>
+                          Implement Stack using Queues&nbsp;
+                          <a href="https://leetcode.com/problems/implement-stack-using-queues/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>
+                          Vertical Paths&nbsp;
+                          <a href="https://codeforces.com/contest/1675/problem/D" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>
+                          Friends&nbsp;
+                          <a href="https://atcoder.jp/contests/abc177/tasks/abc177_d" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>
+                          N-ary Tree Level Order Traversal&nbsp;
+                          <a href="https://leetcode.com/problems/n-ary-tree-level-order-traversal/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>
+                          Binary Tree Level Order Traversal&nbsp;
+                          <a href="https://leetcode.com/problems/binary-tree-level-order-traversal/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">7</th>
+                        <td>
+                          Populating Next Right Pointers in Each Node&nbsp;
+                          <a href="https://leetcode.com/problems/populating-next-right-pointers-in-each-node/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">8</th>
+                        <td>
+                          Word Ladder&nbsp;
+                          <a href="https://leetcode.com/problems/word-ladder/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
                     </tbody>
                   </table>
                 </div>
