stack, queue, priority queue done, 15 question each

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <meta name="description" content="This is a website for STL sheet.">
   <meta name="keywords" content="STL, C++, Data Structure, BinaryMagic, STL sheet">
   <meta name="author" content="BinaryMagic">
+
+  <!-- Title stuff -->
   <title>STL Sheet by Pankaj Kumar</title>
+  <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
+
+  <!-- cdn link -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -507,6 +512,69 @@
                         </td>
                       </tr>
 
+                      <tr>
+                        <th scope="row">12</th>
+                        <td>
+                          Maximum Score of a Good Subarray&nbsp;
+                          <a href="https://leetcode.com/problems/maximum-score-of-a-good-subarray/" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">13</th>
+                        <td>
+                          Odd Even Jump&nbsp;
+                          <a href="https://leetcode.com/problems/odd-even-jump/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">14</th>
+                        <td>
+                          The Score of Students Solving Math Expression&nbsp;
+                          <a href="https://leetcode.com/problems/the-score-of-students-solving-math-expression/"
+                            target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">15</th>
+                        <td>
+                          Trapping Rain Water&nbsp;
+                          <a href="https://leetcode.com/problems/trapping-rain-water/" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
                     </tbody>
                   </table>
                 </div>
@@ -539,8 +607,41 @@
                       </tr>
                     </thead>
                     <tbody>
+
                       <tr>
                         <th scope="row">1</th>
+                        <td>
+                          Number of Recent Calls&nbsp;
+                          <a href="https://leetcode.com/problems/number-of-recent-calls/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>
+                          First Unique Character in a String&nbsp;
+                          <a href="https://leetcode.com/problems/first-unique-character-in-a-string/" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+
+                      <tr>
+                        <th scope="row">3</th>
                         <td>
                           Symmetric Tree&nbsp;
                           <a href="https://leetcode.com/problems/symmetric-tree/" target="_blank" title="Question Link">
@@ -555,7 +656,7 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">2</th>
+                        <th scope="row">4</th>
                         <td>
                           Implement Stack using Queues&nbsp;
                           <a href="https://leetcode.com/problems/implement-stack-using-queues/" target="_blank"
@@ -571,7 +672,7 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">3</th>
+                        <th scope="row">5</th>
                         <td>
                           Friends&nbsp;
                           <a href="https://atcoder.jp/contests/abc177/tasks/abc177_d" target="_blank"
@@ -587,7 +688,7 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">4</th>
+                        <th scope="row">6</th>
                         <td>
                           N-ary Tree Level Order Traversal&nbsp;
                           <a href="https://leetcode.com/problems/n-ary-tree-level-order-traversal/" target="_blank"
@@ -603,7 +704,7 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">5</th>
+                        <th scope="row">7</th>
                         <td>
                           Binary Tree Level Order Traversal&nbsp;
                           <a href="https://leetcode.com/problems/binary-tree-level-order-traversal/" target="_blank"
@@ -619,7 +720,7 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">6</th>
+                        <th scope="row">8</th>
                         <td>
                           Vertical Paths&nbsp;
                           <a href="https://codeforces.com/contest/1675/problem/D" target="_blank" title="Question Link">
@@ -634,7 +735,7 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">7</th>
+                        <th scope="row">9</th>
                         <td>
                           Populating Next Right Pointers in Each Node&nbsp;
                           <a href="https://leetcode.com/problems/populating-next-right-pointers-in-each-node/"
@@ -650,10 +751,87 @@
                       </tr>
 
                       <tr>
-                        <th scope="row">8</th>
+                        <th scope="row">10</th>
+                        <td>
+                          Queue using Two Stacks&nbsp;
+                          <a href="https://www.hackerrank.com/challenges/queue-using-two-stacks/problem?isFullScreen=true" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">11</th>
+                        <td>
+                          Jump Game VI&nbsp;
+                          <a href="https://leetcode.com/problems/jump-game-vi/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+                      
+                      <tr>
+                        <th scope="row">12</th>
+                        <td>
+                          Dota2 Senate&nbsp;
+                          <a href="https://leetcode.com/problems/dota2-senate/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+                      
+                      <tr>
+                        <th scope="row">13</th>
+                        <td>
+                          Longest Increasing Subsequence II&nbsp;
+                          <a href="https://leetcode.com/problems/longest-increasing-subsequence-ii/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">14</th>
                         <td>
                           Word Ladder&nbsp;
                           <a href="https://leetcode.com/problems/word-ladder/" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <th scope="row">15</th>
+                        <td>
+                          Queries with Fixed Length&nbsp;
+                          <a href="https://www.hackerrank.com/challenges/queries-with-fixed-length/problem" target="_blank"
+                            title="Question Link">
                             <i class="fa fa-external-link-square"></i>
                           </a>
                         </td>
