--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </a>
         <ul class="nav">
           <li class="nav-item">
-            <a href="https://www.youtube.com/@binmagic" class="nav-link active" target="_blank">YouTUbe Channel</a>
+            <a href="https://www.youtube.com/@binmagic" class="nav-link active" target="_blank">YouTube Channel</a>
           </li>
           <li class="nav-item">
             <a href="https://www.linkedin.com/in/pankajcoder1/" class="nav-link" target="_blank">LinkedIn</a>
