google search console verification meta code added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <head>
   <!-- SEO stuff start -->
 
+  <!-- Google search console verification code -->
+  <meta name="google-site-verification" content="ai5aUChfaelG0VIE8Lb4H9iocFdcjDU9IxZLRHbo-u8" />
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="This is a website for STL sheet.">
