collasible navbar for mobile devices

--- a/index.html
+++ b/index.html
@@ -59,29 +59,37 @@
   <!-- Header Start -->
 
   <div class="header">
-    <nav class="navbar navbar-light navbar-expand-lg">
+    <nav class="navbar navbar-light navbar-expand-md">
       <div class="container">
         <a href="#" class="navbar-brand">
           <img src="image/BinaryMagic-circle.png" alt="logo" style="width:40px;">
         </a>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="https://www.youtube.com/@binmagic" class="nav-link active" target="_blank">YouTube Channel</a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.linkedin.com/in/pankajcoder1/" class="nav-link" target="_blank">LinkedIn</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="https://github.com/Pankajcoder1" class="nav-link" target="_blank">Github</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="https://discord.com/invite/GMSxHE2fgk" class="nav-link" target="_blank">Join Discord</a>
-          </li>
-        </ul>
+    
+        <!-- Add a button to toggle the collapsible menu -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsible-menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <!-- Add the collapsible menu -->
+        <div class="collapse navbar-collapse" id="collapsible-menu">
+          <ul class="nav ml-auto">
+            <li class="nav-item">
+              <a href="https://www.youtube.com/@binmagic" class="nav-link active" target="_blank">YouTube Channel</a>
+            </li>
+            <li class="nav-item">
+              <a href="https://www.linkedin.com/in/pankajcoder1/" class="nav-link" target="_blank">LinkedIn</a>
+            </li>
+            <li class="nav-item">
+              <a href="https://github.com/Pankajcoder1" class="nav-link" target="_blank">Github</a>
+            </li>
+            <li class="nav-item">
+              <a href="https://discord.com/invite/GMSxHE2fgk" class="nav-link" target="_blank">Join Discord</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
+
 
   </div>
 
