array thumbnail added

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <!-- grid cell -->
           <div class="col-auto mb-3">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="https://i9.ytimg.com/vi/zcBMRjaR0dA/maxresdefault.jpg?v=63e1d3f0&sqp=COyx058G&rs=AOn4CLCjSvF7wdxq4M2un9D3-7ylf87wyw" alt="Card image cap">
+              <img class="card-img-top" src="image/array.png" alt="Card image cap">
               <div class="card-body">
                 <h3>Array</h3>
                 <p class="card-text">
@@ -148,7 +148,7 @@
           <!-- grid cell -->
           <div class="col-auto mb-3">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="https://i9.ytimg.com/vi_webp/YjkefZZ9-HE/maxresdefault.webp?v=63e1d11a&sqp=COyx058G&rs=AOn4CLD5A-UVYmHIQzi7PPUUgSIAqiuAQQ" alt="Card image cap">
+              <img class="card-img-top" src="image/deque.png" alt="Card image cap">
               <div class="card-body">
                 <h3>Deque</h3>
                 <p class="card-text">
@@ -162,7 +162,7 @@
           <!-- grid cell -->
           <div class="col-auto mb-3">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="https://i9.ytimg.com/vi/1JeLxbD1ruk/maxresdefault.jpg?v=63e4cd53&sqp=COyx058G&rs=AOn4CLBwfQq_sRUhmqUe3olxkRhHx6vVyw" alt="Card image cap">
+              <img class="card-img-top" src="image/list.png" alt="Card image cap">
               <div class="card-body">
                 <h3>List</h3>
                 <p class="card-text">Some quick example text to build on the card title and make up the
