some monir text correction

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <div class="card-body">
                 <h3>Array</h3>
                 <p class="card-text">
-                  This container provide you facility to <b>create N-Dimensional array quicky</b> and provide ease in
+                  This container provide you facility to <b class="important-point">create N-Dimensional array quicky</b> and provide ease in
                   many operation like accessing, value assignment and other.
                 </p>
                 <a class="btn" href="array.html">Practice Question <i class="fa fa-arrow-right"
@@ -194,7 +194,7 @@
               <div class="card-body">
                 <h3>Deque</h3>
                 <p class="card-text">
-                  This container is simply <b>implementation of Double ended queue</b>, which provide you <b>push and
+                  This container is simply <b class="important-point">implementation of Double ended queue</b>, which provide you <b class="important-point">push and
                     pop operation from both side</b>.
                 </p>
                 <a class="btn" href="deque.html">Practice Question <i class="fa fa-arrow-right"
@@ -209,8 +209,8 @@
               <img class="card-img-top" src="image/list.png" alt="Card image cap">
               <div class="card-body">
                 <h3>List</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the
-                  bulk of the card'scontent.Some quick example text to buildSome quick example text to build
+                <p class="card-text">
+                  list and forward list is <b class="important-point">implementation of singly and doubly linked list </b> data structure.
                 </p>
                 <a class="btn" href="list.html">Practice Question <i class="fa fa-arrow-right"
                     aria-hidden="true"></i></a>
