--- a/deque.html
+++ b/deque.html
@@ -94,7 +94,7 @@
         <div class="row">
         
             <div class="col-md">
-                <h3>Common doubt in deque 👇</h3>
+                <h3>Common doubt in Deque 👇</h3>
                 <ol class="modern-list">
                     <li>
             
