--- a/list.html
+++ b/list.html
@@ -92,7 +92,7 @@
         <div class="row">
         
             <div class="col-md">
-                <h3>Common doubt in STL 👇</h3>
+                <h3>Common doubt in List 👇</h3>
                 <ol class="modern-list">
                     <li>
             
