stack container added with all detail

--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
                   What is STL ? <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
                 <div class="modern-list-item-description collapse show" id="firstQuestion">
-                  STL stands for <b class="important-point">Standard Template Library</b>, is a powerful library in C++ which is collection of <b class="important-point">data structure, algorithms</b>.
+                  STL stands for <b class="important-point">Standard Template Library</b>, is a powerful library in C++
+                  which is collection of <b class="important-point">data structure, algorithms</b>.
                 </div>
               </div>
 
 
               <div class="modern-list-item">
-                <a class="modern-list-item-name" data-toggle="collapse" href="#secondQuestion" role="button" aria-expanded="false" aria-controls="secondQuestion">
+                <a class="modern-list-item-name" data-toggle="collapse" href="#secondQuestion" role="button"
+                  aria-expanded="false" aria-controls="secondQuestion">
                   Components of STL ? <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
                 <div class="modern-list-item-description collapse" id="secondQuestion">
@@ -138,18 +140,19 @@
               </div>
 
               <div class="modern-list-item">
-                <a class="modern-list-item-name" data-toggle="collapse" href="#thirdQuestion" role="button" aria-expanded="false"
-                  aria-controls="thirdQuestion">
+                <a class="modern-list-item-name" data-toggle="collapse" href="#thirdQuestion" role="button"
+                  aria-expanded="false" aria-controls="thirdQuestion">
                   Why should choose STL ? <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
                 <div class="modern-list-item-description collapse" id="thirdQuestion">
-                  By using this library, you can save time, <b >gain best time and space complexity</b>, finish work in very little line of code. It is mainly known for its <b >versatility, efficiency, and ease of use</b>.
+                  By using this library, you can save time, <b>gain best time and space complexity</b>, finish work in
+                  very little line of code. It is mainly known for its <b>versatility, efficiency, and ease of use</b>.
                 </div>
               </div>
 
             </li>
           </ol>
-          
+
         </div>
 
         <div class="col-md">
@@ -158,7 +161,7 @@
           </div>
         </div>
       </div>
-      
+
       <hr>
 
       <div>
@@ -178,7 +181,8 @@
               <div class="card-body">
                 <h3>Array</h3>
                 <p class="card-text">
-                  This container provide you facility to <b class="important-point">create N-Dimensional array quicky</b> and provide ease in
+                  This container provide you facility to <b class="important-point">create N-Dimensional array
+                    quicky</b> and provide ease in
                   many operation like accessing, value assignment and other.
                 </p>
                 <a class="btn" href="array.html">Practice Question <i class="fa fa-arrow-right"
@@ -194,7 +198,8 @@
               <div class="card-body">
                 <h3>Deque</h3>
                 <p class="card-text">
-                  This container is simply <b class="important-point">implementation of Double ended queue</b>, which provide you <b class="important-point">push and
+                  This container is simply <b class="important-point">implementation of Double ended queue</b>, which
+                  provide you <b class="important-point">push and
                     pop operation from both side</b>.
                 </p>
                 <a class="btn" href="deque.html">Practice Question <i class="fa fa-arrow-right"
@@ -210,18 +215,34 @@
               <div class="card-body">
                 <h3>List</h3>
                 <p class="card-text">
-                  list and forward list is <b class="important-point">implementation of singly and doubly linked list </b> data structure.
+                  list and forward list is <b class="important-point">implementation of singly and doubly linked list
+                  </b> data structure.
                 </p>
                 <a class="btn" href="list.html">Practice Question <i class="fa fa-arrow-right"
                     aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
+
+
+          <div class="col-auto mb-3">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="image/stack.png" alt="Card image cap">
+            <div class="card-body">
+              <h3>Stack</h3>
+              <p class="card-text">
+                Stack is a <b class="important-point">data structure which allow LIFO operation</b>. STL stack is just implementation of it, which allow to do all possible operation with best time complexity.
+              </p>
+              <a class="btn" href="stack.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
+  </div>
 
-    <!-- grid of container end -->
+  <!-- grid of container end -->
   </div>
 
   <!-- footer section start -->
