title in every page added, map container intialised

--- a/priority_queue.html
+++ b/priority_queue.html
@@ -17,7 +17,7 @@
     <!-- SEO stuff end -->
 
     <!-- Title stuff -->
-    <title>STL Sheet by Binary Magic (Pankaj Kumar) </title>
+    <title>Priority Queue Container |STL Sheet by Binary Magic (Pankaj Kumar) </title>
     <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
 
     <!-- cdn link -->
