adding a video link

--- a/queue.html
+++ b/queue.html
@@ -235,7 +235,7 @@
             {
                 name: "Symmetric Tree",
                 link: "https://leetcode.com/problems/symmetric-tree/",
-                videoLink: "#"
+                videoLink: "https://youtu.be/W3OHJGr2AHI"
             },
             {
                 name: "Implement Stack using Queues",
